split the ressort Magazine into sub pages